tests/lime/fail/tokens/macro_rest/byte_34.wsa
macro m" [push 34] m"
